created html structure with elements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <h1>my first website</h1>
+    <header>
+      <nav>
+        <ul>
+          <li>Github</li>
+          <li>Portfolio</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </header>
+
+    <section>
+      <h2>My New Website</h2>
+      <img src="#" alt="" />
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel dicta illo
+        expedita sint ipsum, earum iste autem voluptate officia distinctio nam
+        reiciendis soluta commodi molestias facilis aperiam, totam quae
+        similique asperiores iusto esse! Quisquam qui ullam voluptatibus optio
+        vel, nobis tempora neque nostrum perferendis est saepe similique quas
+        itaque. Delectus excepturi eaque sunt laudantium ab sequi repudiandae
+        nulla consequatur laborum!
+      </p>
+    </section>
+    <section>
+      <h3>Contact Info</h3>
+      <form>
+        <input type="text" />
+        <input type="text" />
+        <button>Submit</button>
+      </form>
+    </section>
+
+    <footer>
+      <p>@2024 my website productions</p>
+    </footer>
   </body>
 </html>
