--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <h1>this is my header</h1>
       <nav>
         <ul>
           <li>Github</li>
@@ -40,6 +41,7 @@
     </section>
 
     <footer>
+      <h2>This is my footer</h2>
       <p>@2024 my website productions</p>
     </footer>
   </body>
